	-> Option to change the reading order for all subsequent shapes as well, e.g. ro '35' changes to '3', afterwards '36' to '4', '37' to '5', '38' to '6' till the end of the shape list with the same parent.
	
1.7.0:
	-> several bugfixes
	-> P2PaLA recognition functionality for pre-trained models under ToolsWidget->Other Tools
	-> fix image exif orientation bug for MacOS, see bug TranskribusSwtGui#276
	-> simplified Text2Image tool (without training step) integrated in ToolsWidget->Other Tools 
	-> add feature to move pages of document by image filename list; start either via Main Menu->Document or the Document-Manager context menu on a loaded document
	
1.7.1:
	-> fix scrollbar layout issue in tools widget
	-> fix broken export for local documents
	-> CITlab HTR training obeys Unicode 12.1.0 character specification instead of Unicode 6.2
	-> usability: show configuration before running CITlabAdvanced layout analysis
	
1.7.2:
	-> additional parameters for Text2Image
	-> new sync txt-files and PAGE-XMLs with existing doc dialog (including: apply txt-files to existing layouts)
	-> text editor: 'Backspace' and 'Ctrl+Return' behavior - moves text one line up or down; Use case: applying txt-files to existing layouts may start at the wrong line which can be corrected
	-> HTR+ training using base models
	-> enable gzip encoding for HTTP API connection
	-> ground truth management features
	-> new HTR options regarding the line segments produced by CITlab HTR
		-> "Do polygon simplification": reduce the complexity of line segments, saving bandwidth and storage space. 
		-> "Keep original line polygons": copy the recognized text to the line segments without altering them.
	-> fix bug that caused image rotation according to EXIF thumbnail section
	-> remove small text-regions feature
	-> async page/transcript loading (do not show progress bar anymore)
	-> quickload of collection by id
	